# ptracer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-release.yml
CMakeModules/: Findlibunwind.cmake
src/: Authorizer.cpp  Authorizer.h  Backtracer.h  ConcurrentQueue.h  FunctionOffset.cpp  FunctionOffset.h  Launcher.cpp  Launcher.h  Mapper.cpp  Mapper.h  ProcessNotification.cpp  ProcessNotification.h  ProcessSyscall.cpp  ProcessSyscall.h  ProcessSyscallEntry.cpp  ProcessSyscallEntry.h  ProcessSyscallExit.cpp  ProcessSyscallExit.h  ProcessTermination.cpp  ProcessTermination.h  Registers.cpp  Registers.h  StackFrame.cpp  StackFrame.h  SyscallDecoderMapper.cpp  SyscallDecoderMapper.h  SyscallNameResolver.cpp  SyscallNameResolver.h  Tracer.cpp  Tracer.h  TracingManager.cpp  TracingManager.h  definitions.cpp  main.cpp
src/aarch64/: Backtracer.cpp  BacktracerImpl.cpp  BacktracerImpl.h  Registers.cpp  SyscallNameResolverInit.cpp
src/backtracers/android/: Backtracer.cpp  BacktracerImpl.h
src/backtracers/linux/: BacktracerImpl.cpp  BacktracerImpl.h
src/decoders/: BinderDecoder.cpp  BinderDecoder.h  ConnectDecoder.cpp  ConnectDecoder.h  ExecveDecoder.cpp  ExecveDecoder.h  FileDecoder.cpp  FileDecoder.h  OpenDecoder.cpp  OpenDecoder.h  ProcessSyscallDecoderMapper.cpp  ProcessSyscallDecoderMapper.h  PtraceDecoder.cpp  PtraceDecoder.h  ReadWriteDecoder.cpp  ReadWriteDecoder.h  SocketDecoder.cpp  SocketDecoder.h  SyscallDecoder.h
src/dto/: ProcessSyscallEntryDto.cpp  ProcessSyscallEntryDto.h  StackFrameDto.cpp  StackFrameDto.h
src/utils/: Hexdump.hpp
src/x86_64/: BacktracerImpl.cpp  BacktracerImpl.h  Registers.cpp  SyscallNameResolverInit.cpp
