cmake_minimum_required(VERSION 3.22)
project(ptracer)

set(CMAKE_VERBOSE_MAKEFILE ON)

set(CMAKE_SYSTEM_NAME Android)
set(ANDROID_PLATFORM android-30)
set(CMAKE_SYSTEM_VERSION android-30)
set(CMAKE_ANDROID_NDK /opt/android-ndk)
set(CMAKE_ANDROID_ARCH_ABI arm64-v8a)
set(ANDROID_STL c++_shared)
#set(CMAKE_ANDROID_STANDALONE_TOOLCHAIN /opt/android-ndk/)
set(CMAKE_C_COMPILER   /home/matteo/Android/Sdk/ndk/25.0.8775105/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android30-clang)
set(CMAKE_CXX_COMPILER /home/matteo/Android/Sdk/ndk/25.0.8775105/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android30-clang++)
set(CMAKE_AR           /home/matteo/Android/Sdk/ndk/25.0.8775105/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar CACHE FILEPATH "Archiver")
set(CMAKE_RANLIB       /home/matteo/Android/Sdk/ndk/25.0.8775105/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ranlib)
set(CMAKE_STRIP        /home/matteo/Android/Sdk/ndk/25.0.8775105/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-strip)

#SET(Boost_ROOT /home/matteo/Progetti/Unive/Thesis/Boost-for-Android-dec1/build/install)
#SET(Boost_DIR /home/matteo/Progetti/Unive/Thesis/Boost-for-Android-dec1/build/install)
SET(BOOST_INCLUDEDIR /home/matteo/Progetti/Unive/Thesis/Boost-for-Android-dec1/build/install/include)
SET(BOOST_LIBRARYDIR /home/matteo/Progetti/Unive/Thesis/Boost-for-Android-dec1/build/install/libs/arm64-v8a)
SET(Boost_NO_SYSTEM_PATHS ON)
#SET(Boost_LIB_PREFIX lib)
#SET(Boost_ARCHITECTURE -a64)
#SET(BOOST_INCLUDEDIR /home/matteo/Progetti/Unive/Thesis/Boost-for-Android/build/out/arm64-v8a/include/boost-1_78/boost)
#SET(BOOST_LIBRARYDIR /home/matteo/Progetti/Unive/Thesis/Boost-for-Android/build/out/arm64-v8a/lib)
#SET(Boost_ADDITIONAL_VERSIONS 1.78)
#SET(Boost_COMPILER -clang)
SET(Boost_DEBUG TRUE)

#set(CMAKE_CXX_STANDARD 23)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/CMakeModules)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -c -g -Werror -Wall -Wextra -MMD -Wall -Wextra -Wconversion -Wsign-conversion")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fstack-protector-all -Wstack-protector -ftrapv -Wno-unused-but-set-variable -Wformat -Wformat-security -D_FORTIFY_SOURCE=2 -U_FORTIFY_SOURCE -fvisibility=hidden")


#set(Boost_USE_STATIC_LIBS ON)
find_package(Boost 1.40 COMPONENTS program_options log REQUIRED)
#find_package(libunwind REQUIRED)
#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${LIBUNWIND_LIBRARIES}")
#find_package(Threads REQUIRED)

file(GLOB SRC CONFIGURE_DEPENDS "src/*.h" "src/*.cpp")
add_executable(ptracer ${SRC})
message("Source files: ${SRC}")

#set_target_properties(ptracer PROPERTIES LINK_SEARCH_START_STATIC ON LINK_SEARCH_END_STATIC ON)

target_link_libraries(ptracer PRIVATE Boost::program_options Boost::thread)

#target_link_libraries(ptracer PRIVATE -static-libgcc -static-libstdc++)
